--- a/style.css
+++ b/style.css
@@ -1739,3 +1739,6 @@ section#contact iframe {
   background-color: var(--brand-color); /* Use your theme color */
   margin: 0.5rem auto; /* Center and add spacing */
 }
+body {
+  overflow-x: hidden;
+}
